--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,11 +1,17 @@
 <ion-header>
   <ion-input [(ngModel)] = "pelicula" autofocus = "boolean" true></ion-input>
-  <ion-button (click) = FilmToSearch()>Busca</ion-button>
+  <ion-button (click) = FilmToSearch()>Buscar</ion-button>
 </ion-header>
 
 <ion-content>
-  <ion-item *ngFor="let movie of movies">
-    <ion-item slot = "start">{{movie.Title}}</ion-item>
-    <ion-item slot = "end">{{movie.Year}}</ion-item>
+  <ion-item button *ngFor="let movie of movies" (click) = FilmToSearchbyID(movie.imdbID)>
+    <ion-label slot = "start">{{movie.Title}}</ion-label>
+    <ion-label slot = "end">{{movie.Year}}</ion-label>
+  </ion-item>
+  <ion-item>
+    <ion-label> Pelicula: {{movie.Title}}</ion-label>
+    <ion-label> Año: {{movie.Year}}</ion-label>
+    <ion-label> Idioma: {{movie.Language}}</ion-label>
+    <ion-label> Descripcion: {{movie.Plot}}</ion-label>
   </ion-item>
 </ion-content>
