--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -8,7 +8,7 @@
     <ion-label slot = "start">{{movie.Title}}</ion-label>
     <ion-label slot = "end">{{movie.Year}}</ion-label>
   </ion-item>
-  <ion-item *ngIf = "movie != []">
+  <ion-item *ngIf = "movie.Title != null">
     <img src = {{movie.Poster}}>
     <ion-content>
       <ion-label> Pelicula: {{movie.Title}}<br/></ion-label>
